syntax = "proto3";

import "google/protobuf/wrappers.proto";

package rewiseDom;

message BytesList {
  repeated google.protobuf.BytesValue list = 1;
}
